RESOLVED FIXED302956
[GTK] Fix the build without ENABLE_CONTEXT_MENUS
https://bugs.webkit.org/show_bug.cgi?id=302956
Summary [GTK] Fix the build without ENABLE_CONTEXT_MENUS
Sebastian Krzyszkowiak
Reported 2025-11-21 09:16:03 PST
...
Attachments
EWS
Comment 1 2025-11-21 10:20:15 PST
Committed 303402@main (6866598fd04d): <https://commits.webkit.org/303402@main> Reviewed commits have been landed. Closing PR #54328 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.