[GTK] Fix the build without ENABLE_CONTEXT_MENUS https://bugs.webkit.org/show_bug.cgi?id=302956

Reviewed by Michael Catanzaro.

* Source/WebKit/UIProcess/API/gtk/WebKitWebViewBase.cpp:
(webkitWebViewBaseButtonPressed):

Canonical link: https://commits.webkit.org/303402@main